--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a href="./index.html#contact" class="header__link"> Contact </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./assets/CV/CV_Kevin Jonathan Kristianto.pdf" class="header__link" download> Resume </a>
+              <a href="./assets/CV/CV Kevin Jonathan Kristianto.pdf" class="header__link" download> Resume </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -88,11 +88,6 @@
     <section class="home-hero">
       <div class="home-hero__content">
         <h1 class="heading-primary">Hi, My name is Kevin Jonathan Kristianto</h1>
-        <div class="home-hero__info">
-          <!-- <p class="text-primary">
-            Front-end Deveoper
-          </p> -->
-        </div>
         <div class="home-hero__cta">
           <a href="./index.html#contact" class="btn btn--bg">Get in touch</a>
         </div>
@@ -138,10 +133,6 @@
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
-          <!-- <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
-          </span> -->
         </h2>
         <div class="about__content">
           <div class="about__content-main">
@@ -184,10 +175,6 @@
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
-          <!-- <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
-          </span> -->
         </h2>
 
         <div class="projects__content">
@@ -270,10 +257,6 @@
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
-          <!-- <span class="heading-sec__sub heading-sec__sub--lt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
-          </span> -->
         </h2>
         <div class="contact__form-container">
           <form action="#" class="contact__form">
