--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a href="./index.html#contact" class="header__link"> Contact </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./assets/CV/CV_Kevin Jonathan Kristianto.pdf" class="header__link" download> Resume </a>
+              <a href="./assets/CV/CV_KevinJonathanKristianto.pdf" class="header__link" download> Resume </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
