--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
               </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index.html#contact" class="header__link"> Contact </a>
+              <a href="./index.html#contact" class="header__link">Contact </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./assets/CV/CV_KevinJonathanKristianto.pdf" class="header__link" download> Resume </a>
+              <a href="./assets/CV/ATS_KevinJonathanKristianto.pdf" class="header__link" download>Resume </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -55,7 +55,7 @@
               alt="hamburger menu"
               class="header__main-ham-menu"
             />
-            <img
+            <img~
               src="./assets/svg/ham-menu-close.svg"
               alt="hamburger menu close"
               class="header__main-ham-menu-close d-none"
